--- a/js/packages/candy-machine-ui/public/index.html
+++ b/js/packages/candy-machine-ui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Solana Squares: SuperBowl LVI Edition"
+      content="Solana Scratch Off"
     />
     <link rel="apple-touch-icon" href="./favicon.ico" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Solana Squares: SuperBowl LVI</title>
+    <title>Solana Scratch Off</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
